--- a/netlify.toml
+++ b/netlify.toml
@@ -1,51 +1,28 @@
 [build]
-  # Build command
-  command = "npm run build"
-  # Directory to publish
-  publish = "dist"
-  # Build environment variables
-  environment = { NODE_VERSION = "18" }
+command = "npm run build"
+publish = "dist"
 
 [build.environment]
-  # Netlify environment variables for build
-  CI = "true"
-  NODE_ENV = "production"
+NODE_VERSION = "18"
+CI = "true"
+NODE_ENV = "production"
 
-# Redirect rules for SPA (Single Page Application)
+# SPA redirect for React Router
 [[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
+from = "/*"
+to = "/index.html"
+status = 200
 
-# API redirects to backend (replace with your backend URL after deployment)
-[[redirects]]
-  from = "/api/*"
-  to = "https://your-backend-url.com/api/:splat"
-  status = 200
-  force = true
-
-# Headers for security
+# Security headers
 [[headers]]
-  for = "/*"
-  [headers.values]
-    X-Frame-Options = "DENY"
-    X-XSS-Protection = "1; mode=block"
-    X-Content-Type-Options = "nosniff"
-    Referrer-Policy = "strict-origin-when-cross-origin"
-    Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self' https:;"
+for = "/*"
+[headers.values]
+X-Frame-Options = "DENY"
+X-Content-Type-Options = "nosniff"
+Referrer-Policy = "strict-origin-when-cross-origin"
 
 # Cache static assets
 [[headers]]
-  for = "/assets/*"
-  [headers.values]
-    Cache-Control = "public, max-age=31536000, immutable"
-
-# Environment variables (for Netlify deployment)
-# Set these in Netlify dashboard under Site settings > Environment variables
-# VITE_API_URL = "https://your-backend-url.com/api"
-# VITE_FIREBASE_API_KEY = "your_firebase_api_key"
-# VITE_FIREBASE_AUTH_DOMAIN = "your_firebase_auth_domain"
-# VITE_FIREBASE_PROJECT_ID = "your_firebase_project_id"
-# VITE_FIREBASE_STORAGE_BUCKET = "your_firebase_storage_bucket"
-# VITE_FIREBASE_MESSAGING_SENDER_ID = "your_firebase_messaging_sender_id"
-# VITE_FIREBASE_APP_ID = "your_firebase_app_id"
+for = "/assets/*"
+[headers.values]
+Cache-Control = "public, max-age=31536000, immutable"
