Fix Netlify build: Update Node.js to v20, fix vite command, add backend URL

--- a/netlify.toml
+++ b/netlify.toml
@@ -3,9 +3,10 @@ command = "npm run build"
 publish = "dist"
 
 [build.environment]
-NODE_VERSION = "18"
+NODE_VERSION = "20"
 CI = "true"
 NODE_ENV = "production"
+VITE_API_URL = "https://srrfarms-backend.onrender.com/api"
 
 # SPA redirect for React Router
 [[redirects]]
