--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "url": "https://github.com/sathishdusharla/SRRFarms_Final.git"
   },
   "engines": {
-    "node": ">=18.0.0",
+    "node": ">=20.0.0",
     "npm": ">=8.0.0"
   },
   "scripts": {
     "dev": "vite",
-    "build": "vite build && npm run build:check",
+    "build": "npx vite build && npm run build:check",
     "build:check": "ls -la dist/",
     "lint": "eslint .",
     "preview": "vite preview",
