--- a/package.json
+++ b/package.json
@@ -23,14 +23,16 @@
     "deploy": "npm run build"
   },
   "dependencies": {
+    "@vitejs/plugin-react": "^4.3.1",
+    "bcryptjs": "^3.0.2",
     "firebase": "^11.10.0",
     "lucide-react": "^0.344.0",
+    "mongodb": "^6.17.0",
     "node-fetch": "^3.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.6.3",
-    "vite": "^5.4.2",
-    "@vitejs/plugin-react": "^4.3.1"
+    "vite": "^5.4.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
