--- a/server/server/package.json
+++ b/server/server/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
-    "multer": "^2.0.2"
+    "bcryptjs": "^3.0.2",
+    "mongoose": "^8.16.4",
+    "multer": "^2.0.2",
+    "validator": "^13.15.15"
   }
 }
