Fix: Update API URL to Render backend and add deployment scripts
- Updated .env to point to https://srrfarms-backend.onrender.com/api
- Enhanced error handling for backend connectivity issues
- Added deployment and startup scripts
- Fixed production configuration
- Added comprehensive documentation

--- a/.env.production
+++ b/.env.production
@@ -1,8 +1,8 @@
 # Production Environment Variables for Netlify Deployment
 # Set these in Netlify Dashboard: Site Settings > Environment Variables
 
-# API Configuration - Update with your deployed backend URL
-VITE_API_URL=https://your-backend-deployment-url.com/api
+# API Configuration - Your Render Backend
+VITE_API_URL=https://srrfarms-backend.onrender.com/api
 VITE_APP_ENV=production
 VITE_APP_NAME=SRR Farms
 
