--- a/package.json
+++ b/package.json
@@ -16,11 +16,16 @@
   },
   "scripts": {
     "dev": "vite",
+    "dev:frontend": "vite",
+    "dev:backend": "cd server && npm start",
+    "dev:full": "npm run dev:backend & npm run dev:frontend",
+    "start:backend": "cd server && node server.js",
     "build": "npx vite build && npm run build:check",
     "build:check": "ls -la dist/",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy": "npm run build"
+    "deploy": "npm run build",
+    "test:connection": "node test-backend-connection.js"
   },
   "dependencies": {
     "@vitejs/plugin-react": "^4.3.1",
