Fix: Correct Netlify URL to srrfarms.netlify.app
- Updated API URL detection for correct Netlify domain
- Fixed homepage URL in package.json
- Updated CORS configuration for correct domain
- Updated all documentation with correct URL
- Backend verified working at https://srrfarms-backend.onrender.com

Site should now work properly at https://srrfarms.netlify.app

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "description": "SRR Farms E-commerce Platform with UPI Payment System",
   "author": "SRR Farms",
-  "homepage": "https://srrfarms-final.netlify.app",
+  "homepage": "https://srrfarms.netlify.app",
   "repository": {
     "type": "git",
     "url": "https://github.com/sathishdusharla/SRRFarms_Final.git"
