--- a/server/.env.production
+++ b/server/.env.production
@@ -19,7 +19,7 @@ PORT=3001
 NODE_ENV=production
 
 # CORS Configuration
-FRONTEND_URL=https://your-frontend-domain.com
+FRONTEND_URL=https://srrfarms.netlify.app
 
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
