--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "jest"
+    "test": "jest",
+    "seed": "node seedData.js",
+    "test-db": "node test-mongodb.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
